[package]
name = "opgg"
version = "0.1.0"
authors = ["Youngchan Lee <youngchan1115@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.7"
reqwest = { version = "0.10.0", features = ["blocking", "json"] }
serde = { version = "1.0.104", features = ["derive"] }
prettytable-rs = "0.8.0"

